# moo

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  process-compose.yaml  rust-toolchain.toml
.github/workflows/: binaries.yml  pages.yml  refresh-hashes.yml  rust.yml
docs/: index.html  install  install.ps1  style.css
harness/: package.json  tsconfig.json
harness/src/: agent.ts  commands.ts  index.ts  lib.ts  llm_stream.ts  moo.ts  ops.d.ts  prompt.ts  steps.ts  types.ts
harness/src/commands/: _shared.ts  chats.ts  describe.ts  dump.ts  export.ts  help.ts  llm_auth.ts  mcp.ts  memory.ts  messages.ts  models.ts  schema.ts  step.ts  ui.ts  vocab.ts
harness/src/core/: result.ts  retry.ts
harness/src/driver/: step.ts
harness/test/: step_driver.test.ts
src/: async_runtime.rs  broadcast.rs  cdp.rs  driver.rs  host.rs  main.rs  pool.rs  runtime.rs  server.rs  settings.rs  snapshots.rs  util.rs  ws.rs
src/ops/: env.rs  facts.rs  fs.rs  http.rs  llm.rs  misc.rs  mod.rs  proc.rs  refs.rs  sparql.rs  store.rs
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  AppsView.tsx  ChatApps.tsx  DiffView.tsx  McpView.tsx  MemoryView.tsx  SettingsView.tsx  Sidebar.tsx  Timeline.tsx  V8View.tsx  api.ts  auth.ts  diffs.ts  events.ts  main.tsx  markdown.ts  paths.ts  state.ts  style.css  syntax.ts  theme.ts
web/src/api/: chat.ts  contract.ts  fs.ts  index.ts  llmAuth.ts  mcp.ts  memory.ts  objects.ts  timeline.ts  transport.ts  types.ts  ui.ts  utils.ts  v8.ts
